[package]
name = "spl-utils"
version = "0.1.0"
description = "An Anchor program that transfers all tokens from a source account and closes it."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_utils"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "=0.30.1"
